--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
     "npm-run-all2": "^6.1.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
     "unplugin-vue-components": "^0.25.2",
