--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "vant": "^4.8.0",
     "vue": "^3.3.4",
