--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "npm-run-all2": "^6.1.1",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
     "typescript": "~5.2.0",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
